src/main/kotlin/com/example/hhplusweek3/error/BadRequestException.kt
package com.example.hhplusweek3.error

class BadRequestException(message: String) : RuntimeException(message)